# TaskHandler

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
inc/: task_handler.h
src/: googletest_nomain.cc  task_handler.cc
